--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>Hello World</p>
+    <button>Click to Fetch Data</button>
+    <p></p>
    <script src="script.js"></script>
 </body>
 </html>
