added functionalities for login and register

--- a/client/register/index.html
+++ b/client/register/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Register</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Login</h1>
+    <h1>Register</h1>
     <select name="role" id="role">
       <option value="Customer">Customer</option>
       <option value="InventoryManager">Inventory Manager</option>
@@ -17,9 +17,8 @@
     </select>
     <input id="email" type="text" placeholder="email" />
     <input id="password" type="password" placeholder="password" />
-    <button id="login">Login</button>
-    <a href="/register">Sign up</a>
-
+    <button id="register">Sign Up</button>
+    <a href="/">Sign In</a>
     <script src="script.js"></script>
   </body>
 </html>
