renamed designated folders for client

--- a/client/ecommerce/index.html
+++ b/client/ecommerce/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="logo icon" href="./imgs/title.png" type="image/x-icon" />
+    <link
+      rel="logo icon"
+      href="../assets/images/title.png"
+      type="image/x-icon"
+    />
     <title>Sphere</title>
-    <link rel="stylesheet" href="ecommerce.css" />
+    <link rel="stylesheet" href="ecommerce_styles.css" />
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
   </head>
   <body>
@@ -16,7 +20,7 @@
         <li class="logo">
           <a href="#" class="nav-link">
             <img
-              src="./imgs/sphere no brand alt logo.png"
+              src="../assets/images/sphere no brand alt logo.png"
               alt="logo"
               class="link-text"
             />
@@ -94,16 +98,22 @@
     </nav>
 
     <main>
-        <div class="main-container">
-            <div class="search-box">
-                <input type="text" class="search" placeholder="Search Products, Brands and Stores...">
-                <button type="submit" class="search-btn">
-                    <span class="iconify" data-icon="bx:bx-search-alt" data-inline="false"></span>
-                </button>
-            </div>
-
+      <div class="main-container">
+        <div class="search-box">
+          <input
+            type="text"
+            class="search"
+            placeholder="Search Products, Brands and Stores..."
+          />
+          <button type="submit" class="search-btn">
+            <span
+              class="iconify"
+              data-icon="bx:bx-search-alt"
+              data-inline="false"
+            ></span>
+          </button>
         </div>
-
+      </div>
     </main>
   </body>
 </html>
