--- a/client/register/index.html
+++ b/client/register/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="register_styles.css" />
   </head>
   <body>
     <h1>Register</h1>
@@ -19,6 +19,6 @@
     <input id="password" type="password" placeholder="password" />
     <button id="register">Sign Up</button>
     <a href="/">Sign In</a>
-    <script src="script.js"></script>
+    <script src="register_script.js"></script>
   </body>
 </html>
