--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="logo icon" href="./imgs/title.png" type="image/x-icon">
+    <link rel="logo icon" href="../assets/images/title.png" type="image/x-icon">
     <title>Sphere</title>
-    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="dashboard_styles.css">
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
     
 </head>
@@ -16,7 +16,7 @@
         <ul class="navbar-nav">
             <li class="logo">
                 <a href="#" class="nav-link">
-                    <img src="./imgs/sphere no brand alt logo.png" alt="logo" class="link-text">
+                    ><img src="../assets/images/sphere no brand alt logo.png" alt="logo" class="link-text">
                     <span class="link-text logo-text"> SPHERE </span>
                    <svg
                         aria-hidden="true"
