--- a/client/index.html
+++ b/client/index.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Log In</title>
     <link rel="stylesheet" href="login_styles.css" />
-  </head>
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/821113cfbe.js" crossorigin="anonymous"></script>
+</head>
   <body>
-    <h1>Login</h1>
-    <select name="role" id="role">
-      <option value="Customer">Customer</option>
-      <option value="InventoryManager">Inventory Manager</option>
-      <option value="Finance">Finance</option>
-      <option value="SuperAdmin">Super Admin</option>
-    </select>
-    <input id="email" type="text" placeholder="email" />
-    <input id="password" type="password" placeholder="password" />
-    <button id="login">Login</button>
-    <a href="/register">Sign up</a>
+      <section class="full-screen">
+          <div class="hero">
+              <div class="container-left">
+                      <br> <h1 class="bottom">Online Retail Business</h1> <br>
+                      <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br> 
+                      Tenetur, nihil alias optio corrupti animi suscipit? <br> 
+                      Est nesciunt similique assumenda labore voluptatum omnis <br> 
+                      ullam consectetur, non pariatur inventore explicabo, <br> 
+                      voluptates repudiandae. </p>
+                      <div class="button">
+                      <button class="learn">Sign Up</button>
+                      </div>
+                      <img class="revenue-file" src="/assets/images/revenue.svg" alt="reveneue">
+              </div>
 
-    <script src="login_script.js"></script>
+              <div class="container-right">
+                <form action="#">
+                    <img class="logo" src="/assets/images/sphere.png" alt="business-logo">
+                    <br> <h1>Log In</h1> <br>
+                    <span>Enter your account:</span>
+                    <div class="input-holder">
+                        <input type="email" placeholder="Email"/>
+                        <input type="password" placeholder="Password"/>
+                    </div>
+                    <select class="dropdown" id="role" name="role">
+                      <option value="" disabled selected>Select position</option>
+                      <option value="Customer">Customer</option>
+                      <option value="SuperAdmin">Super Admin</option>
+                      <option value="Finance">Finance</option>
+                      <option value="InventoryManager">Inventory Manager</option>
+                    </select> <br>
+                    <button class="login">Log In</button>
+                    </form>
+              </div>
+      
+          </div>
+    </section>
+  <script src="login_script.js"></script>
   </body>
 </html>
