--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -16,7 +16,7 @@
         <ul class="navbar-nav">
             <li class="logo">
                 <a href="#" class="nav-link">
-                    ><img src="../assets/images/sphere no brand alt logo.png" alt="logo" class="link-text">
+                    <img src="../assets/images/sphere no brand alt logo.png" alt="logo" class="link-text">
                     <span class="link-text logo-text"> SPHERE </span>
                    <svg
                         aria-hidden="true"
