implemented validation for registration of users

--- a/client/register/index.html
+++ b/client/register/index.html
@@ -15,7 +15,11 @@
       <option value="Finance">Finance</option>
       <option value="SuperAdmin">Super Admin</option>
     </select>
-    <input id="email" type="text" placeholder="email" />
+    <input
+      id="email"
+      type="email"
+      placeholder="email"
+    />
     <input id="password" type="password" placeholder="password" />
     <button id="register">Sign Up</button>
     <a href="/">Sign In</a>
