--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
       <option value="Finance">Finance</option>
       <option value="SuperAdmin">Super Admin</option>
     </select>
-    <input id="email" type="text" placeholder="email" />
+    <input id="email" type="email" placeholder="email" />
     <input id="password" type="password" placeholder="password" />
     <button id="login">Login</button>
     <a href="/register">Sign up</a>
