ecommerce shop can now view items

--- a/client/ecommerce/index.html
+++ b/client/ecommerce/index.html
@@ -62,7 +62,7 @@
           </a>
         </li>
 
-        <li class="nav-item">
+        <li id="shop" class="nav-item">
           <a href="#" class="nav-link">
             <span
               class="iconify"
@@ -84,7 +84,7 @@
           </a>
         </li>
 
-        <li class="nav-item">
+        <li id="logout" class="nav-item">
           <a href="#" class="nav-link">
             <span
               class="iconify"
@@ -114,6 +114,12 @@
           </button>
         </div>
       </div>
+      <div id="shop-cart">
+        <ul id="items">
+
+        </ul>
+      </div>
     </main>
+    <script src="ecommerce_script.js"></script>
   </body>
 </html>
