--- a/client/finance/index.html
+++ b/client/finance/index.html
@@ -6,7 +6,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
-<body>
+<body onload="checkUser()">
   <div class="sidebar">
     <div class="logo-details">
       <img class="bx bxl-c-plus-plus icon"  src="/assets/images/sphere no brand.png" alt="logo">
