implemented logout feature

--- a/client/inventory/index.html
+++ b/client/inventory/index.html
@@ -8,6 +8,7 @@
   </head>
   <body onload="checkUser()">
     <h1>Inventory</h1>
+    <button id="logout">Logout</button>
     <script src="inventory_script.js"></script>
   </body>
 </html>
