--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -95,7 +95,7 @@
           </a>
         </li>
 
-        <li class="nav-item">
+        <li id="logout" class="nav-item">
           <a href="#" class="nav-link">
             <span
               class="iconify"
