--- a/client/finance/index.html
+++ b/client/finance/index.html
@@ -53,8 +53,8 @@
          <span class="links_name">Messages</span>
        </a>
        <span class="tooltip">Messages</span>
-     </li> <br> <br> <br> <br> <br> <br> <br> <br>
-     <li>
+     </li> 
+     <li id="logout">
       <a href="#">
         <i class='bx bx-log-out' ></i>
         <span class="links_name">Logout</span>
