--- a/client/finance/index.html
+++ b/client/finance/index.html
@@ -109,12 +109,14 @@
                   <h5 class="sales-txt">Finance View</h5>
                 </div>
 
-                <div class="rectangle">
+                <div id="countrySales" class="rectangle">
                   <h5 class="sales-txt">Regional Sales</h5>
                 </div>
           </div>
     </div>   
   </section>
+  <script src="https://d3js.org/d3.v4.js"></script>
+  <script script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="finance_script.js"></script>
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </body>
