--- a/client/inventory/index.html
+++ b/client/inventory/index.html
@@ -9,6 +9,8 @@
   <body onload="checkUser()">
     <h1>Inventory</h1>
     <button id="logout">Logout</button>
+    <div id="my_dataviz"></div>
+    <script src="https://d3js.org/d3.v4.js"></script>
     <script src="inventory_script.js"></script>
   </body>
 </html>
