--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -51,7 +51,7 @@
           </a>
         </li>
 
-        <li class="nav-item">
+        <li id="user" class="nav-item">
           <a href="#" class="nav-link">
             <span
               class="iconify"
@@ -62,7 +62,7 @@
           </a>
         </li>
 
-        <li class="nav-item">
+        <li id="inventory" class="nav-item">
           <a href="#" class="nav-link">
             <span
               class="iconify"
@@ -73,7 +73,7 @@
           </a>
         </li>
 
-        <li class="nav-item">
+        <li id="finance" class="nav-item">
           <a href="#" class="nav-link">
             <span
               class="iconify"
@@ -84,7 +84,7 @@
           </a>
         </li>
 
-        <li class="nav-item">
+        <li id="shop" class="nav-item">
           <a href="#" class="nav-link">
             <span
               class="iconify"
