--- a/client/finance/index.html
+++ b/client/finance/index.html
@@ -15,45 +15,26 @@
     </div>
     <ul class="nav-list">
       <li>
-          <i class='bx bx-search' ></i>
-         <input type="text" placeholder="Search...">
-         <span class="tooltip">Search</span>
-      </li>
-      <li>
-        <a href="#">
+        <a href="http://localhost:5000/dashboard">
           <i class='bx bx-grid-alt'></i>
           <span class="links_name">Dashboard</span>
         </a>
          <span class="tooltip">Dashboard</span>
       </li>
       <li>
-       <a href="#">
+       <a href="http://localhost:5000/user">
          <i class='bx bx-user' ></i>
          <span class="links_name">User</span>
        </a>
        <span class="tooltip">User</span>
      </li>
      <li>
-        <a href="#">
-          <i class='bx bx-box' ></i>
-          <span class="links_name">Messages</span>
-        </a>
-        <span class="tooltip">Messages</span>
-      </li>
-     <li>
-        <a href="#">
+        <a href="http://localhost:5000/inventory">
           <i class='bx bx-pie-chart-alt-2' ></i>
-          <span class="links_name">Finance</span>
+          <span class="links_name">Inventory</span>
         </a>
-        <span class="tooltip">Finance</span>
+        <span class="tooltip">Inventory</span>
       </li>
-     <li>
-       <a href="#">
-         <i class='bx bx-cart' ></i>
-         <span class="links_name">Messages</span>
-       </a>
-       <span class="tooltip">Messages</span>
-     </li> 
      <li id="logout">
       <a href="#">
         <i class='bx bx-log-out' ></i>
@@ -91,21 +72,21 @@
     </div>
     <div class="main-container"> 
           <div class="sales-container">
-                <div class="square">
+                <div id="daily" class="square">
                   <h5 class="sales-txt">Daily Sales</h5>
                 </div>
 
-                <div class="square">
+                <div id="monthly" class="square">
                   <h5 class="sales-txt">Monthly Sales</h5>
                 </div>
 
-                <div class="square">
+                <div id="annual" class="square">
                   <h5 class="sales-txt">Annual Sales</h5>
                 </div>
           </div> <br>
 
           <div class="finance-container">
-                <div class="rectangle">
+                <div id="financeView" class="rectangle">
                   <h5 class="sales-txt">Finance View</h5>
                 </div>
 
