responsive sidebar at inventory and dashboard

--- a/client/finance/index.html
+++ b/client/finance/index.html
@@ -36,9 +36,9 @@
      <li>
         <a href="#">
           <i class='bx bx-box' ></i>
-          <span class="links_name">Messages</span>
+          <span class="links_name">Inventory</span>
         </a>
-        <span class="tooltip">Messages</span>
+        <span class="tooltip">Inventory</span>
       </li>
      <li>
         <a href="#">
@@ -50,9 +50,9 @@
      <li>
        <a href="#">
          <i class='bx bx-cart' ></i>
-         <span class="links_name">Messages</span>
+         <span class="links_name">Shop</span>
        </a>
-       <span class="tooltip">Messages</span>
+       <span class="tooltip">Shop</span>
      </li> <br> <br> <br> <br> <br> <br> <br> <br>
      <li>
       <a href="#">
