--- a/client/ecommerce/index.html
+++ b/client/ecommerce/index.html
@@ -1,121 +1,157 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="ecommerce_styles.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
+<body onload="checkUser()">
+  <div class="sidebar">
+    <div class="logo-details">
+      <img class="bx bxl-c-plus-plus icon"  src="/assets/images/sphere no brand.png" alt="logo">
+        <div class="logo_name">Sphere</div>
+        <i class='bx bx-menu' id="btn" ></i>
+    </div>
+    <ul class="nav-list">
+      <li>
+        <a href="http://localhost:5000/dashboard">
+          <i class='bx bx-grid-alt'></i>
+          <span class="links_name">Dashboard</span>
+        </a>
+         <span class="tooltip">Dashboard</span>
+      </li>
+      <li>
+       <a href="http://localhost:5000/user">
+         <i class='bx bx-user' ></i>
+         <span class="links_name">User</span>
+       </a>
+       <span class="tooltip">User</span>
+     </li>
+     <li>
+        <a href="http://localhost:5000/inventory">
+          <i class='bx bx-pie-chart-alt-2' ></i>
+          <span class="links_name">Inventory</span>
+        </a>
+        <span class="tooltip">Inventory</span>
+      </li>
+     <li id="logout">
+      <a href="#">
+        <i class='bx bx-log-out' ></i>
+        <span class="links_name">Logout</span>
+      </a>
+      <span class="tooltip">Logout</span>
+    </li>
+   </ul>
+    </ul>
+  </div>
+  <section class="home-section">
+      <div class="text"></div>
 
-    <link
-      rel="logo icon"
-      href="../assets/images/title.png"
-      type="image/x-icon"
-    />
-    <title>Sphere</title>
-    <link rel="stylesheet" href="ecommerce_styles.css" />
-    <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
-  </head>
-  <body onload="checkUser()">
-    <nav class="navbar">
-      <ul class="navbar-nav">
-        <li class="logo">
-          <a href="#" class="nav-link">
-            <img
-              src="../assets/images/sphere no brand alt logo.png"
-              alt="logo"
-              class="link-text"
-            />
-            <span class="link-text logo-text"> SPHERE </span>
-            <svg
-              aria-hidden="true"
-              focusable="false"
-              data-prefix="fad"
-              data-icon="angle-double-right"
-              role="img"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 448 512"
-              class="svg-inline--fa fa-angle-double-right fa-w-14 fa-5x"
-            >
-              <g class="fa-group">
-                <path
-                  fill="currentColor"
-                  d="M224 273L88.37 409a23.78 23.78 0 0 1-33.8 0L32 386.36a23.94 23.94 0 0 1 0-33.89l96.13-96.37L32 159.73a23.94 23.94 0 0 1 0-33.89l22.44-22.79a23.78 23.78 0 0 1 33.8 0L223.88 239a23.94 23.94 0 0 1 .1 34z"
-                  class="fa-secondary"
-                ></path>
-                <path
-                  fill="currentColor"
-                  d="M415.89 273L280.34 409a23.77 23.77 0 0 1-33.79 0L224 386.26a23.94 23.94 0 0 1 0-33.89L320.11 256l-96-96.47a23.94 23.94 0 0 1 0-33.89l22.52-22.59a23.77 23.77 0 0 1 33.79 0L416 239a24 24 0 0 1-.11 34z"
-                  class="fa-primary"
-                ></path>
-              </g>
-            </svg>
-          </a>
-        </li>
+    <div class="top-container">
+            <div class="search-container">
+                  <div class="search_wrap search_wrap_1">
+                        <div class="search_box">
+                            <input type="text" class="input" placeholder="search...">
+                              <div class="btn btn_common">
+                                <i class="fas fa-search"></i>
+                              </div>
+                        </div>
+                  </div>
+            </div>
+    </div>
+    <div class="main-container"> 
 
-        <li id="user" class="nav-item">
-          <a href="#" class="nav-link">
-            <span
-              class="iconify"
-              data-icon="ic:baseline-account-circle"
-              data-inline="false"
-            ></span>
-            <span class="link-text">User</span>
-          </a>
-        </li>
+          <div class="product-container">
+                  <div class="square">
+                      <div class="image-container">
+                      </div>
+                      <div class="amount-container">
+                            <button class='bx bxs-minus-square'></button>
+                            <div class="count">
+                              <h6 class="amount">1</h6>
+                            </div>
+                            <button class='bx bxs-plus-square'></button>
+                      </div>
 
-        <li id="shop" class="nav-item">
-          <a href="#" class="nav-link">
-            <span
-              class="iconify"
-              data-icon="grommet-icons:shop"
-              data-inline="false"
-            ></span>
-            <span class="link-text">Shop</span>
-          </a>
-        </li>
+                      <div class="price-container">
+                          <button class="price">Add to Cart</button>
+                      </div>
+                  </div>
 
-        <li class="nav-item">
-          <a href="#" class="nav-link">
-            <span
-              class="iconify"
-              data-icon="ant-design:shopping-cart-outlined"
-              data-inline="false"
-            ></span>
-            <span class="link-text">Cart</span>
-          </a>
-        </li>
+                  <div class="square">
+                    <div class="image-container">
+                    </div>
+                    <div class="amount-container">
+                          <button class='bx bxs-minus-square'></button>
+                          <div class="count">
+                            <h6 class="amount">2</h6>
+                          </div>
+                          <button class='bx bxs-plus-square'></button>
+                    </div>
 
-        <li id="logout" class="nav-item">
-          <a href="#" class="nav-link">
-            <span
-              class="iconify"
-              data-icon="bx:bx-log-out"
-              data-inline="false"
-            ></span>
-            <span class="link-text">Log Out</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
+                    <div class="price-container">
+                        <button class="price">Add to Cart</button>
+                    </div>
+                </div>
 
-    <main>
-      <div class="main-container">
-        <div class="search-box">
-          <input
-            type="text"
-            class="search"
-            placeholder="Search Products, Brands and Stores..."
-          />
-          <button type="submit" class="search-btn">
-            <span
-              class="iconify"
-              data-icon="bx:bx-search-alt"
-              data-inline="false"
-            ></span>
-          </button>
-        </div>
-      </div>
-      <div id="content"></div>
-    </main>
-    <script src="ecommerce_script.js"></script>
-  </body>
+                <div class="square">
+                    <div class="image-container">
+                    </div>
+                    <div class="amount-container">
+                          <button class='bx bxs-minus-square'></button>
+                          <div class="count">
+                            <h6 class="amount">3</h6>
+                          </div>
+                          <button class='bx bxs-plus-square'></button>
+                    </div>
+
+                    <div class="price-container">
+                        <button class="price">Add to Cart</button>
+                    </div>
+              </div>
+
+              <div class="square">
+                  <div class="image-container">
+                  </div>
+                  <div class="amount-container">
+                        <button class='bx bxs-minus-square'></button>
+                        <div class="count">
+                          <h6 class="amount">4</h6>
+                        </div>
+                        <button class='bx bxs-plus-square'></button>
+                  </div>
+
+                  <div class="price-container">
+                      <button class="price">Add to Cart</button>
+                  </div>
+              </div>
+          </div>
+          
+          
+          <div class="product-container">
+                <div class="square">
+                    <div class="image-container">
+                    </div>
+                    <div class="amount-container">
+                          <button class='bx bxs-minus-square'></button>
+                          <div class="count">
+                            <h6 class="amount">5</h6>
+                          </div>
+                          <button class='bx bxs-plus-square'></button>
+                    </div>
+
+                    <div class="price-container">
+                        <button class="price">Add to Cart</button>
+                    </div>
+                </div>
+          </div>
+
+    </div>   
+  </section>
+  <script src="https://d3js.org/d3.v4.js"></script>
+  <script script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+  <script src="finance_script.js"></script>
+  <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+</body>
 </html>
