--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -11,26 +11,32 @@
       type="image/x-icon"
     />
     <title>Sphere</title>
-    <link rel="stylesheet" href="dashboard_styles.css">
-     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-</head>
-<body>
-   <div class="sidebar">
-        <div class="logo-details">
-            <img class="bx bxl-c-plus-plus icon"  src="/client/assets/images/sphere no brand alt logo.png" alt="logo">
-                <div class="logo_name">Sphere</div>
-                <i class='bx bx-menu' id="btn" ></i>
-        </div>
-            <ul class="nav-list">
-                    <li> 
-                        <a href="#">
-                            <i class='bx bx-grid-alt'></i>
-                            <span class="links_name">Dashboard</span>
-                        </a>
-                        <span class="tooltip">Dashboard</span>
-                    </li>
+    <link rel="stylesheet" href="dashboard_styles.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <div class="sidebar">
+      <div class="logo-details">
+        <img
+          class="bx bxl-c-plus-plus icon"
+          src="../assets/images/sphere no brand alt logo.png"
+          alt="logo"
+        />
+        <div class="logo_name">Sphere</div>
+        <i class="bx bx-menu" id="btn"></i>
+      </div>
+      <ul class="nav-list">
+        <li>
+          <a href="#">
+            <i class="bx bx-grid-alt"></i>
+            <span class="links_name">Dashboard</span>
+          </a>
+          <span class="tooltip">Dashboard</span>
+        </li>
 
         <li id="user" class="nav-item">
           <a href="#" class="nav-link">
@@ -43,84 +49,88 @@
           </a>
         </li>
 
-                    <li>
-                        <a href="#">
-                            <i class='bx bx-user' ></i>
-                            <span class="links_name">User</span>
-                        </a>
-                        <span class="tooltip">User</span>
-                    </li>
+        <li>
+          <a href="#">
+            <i class="bx bx-user"></i>
+            <span class="links_name">User</span>
+          </a>
+          <span class="tooltip">User</span>
+        </li>
 
-                    <li>
-                        <a href="#">
-                            <i class='bx bx-box' ></i>
-                            <span class="links_name">Inventory</span>
-                        </a>
-                        <span class="tooltip">Inventory</span>
-                    </li>
-                    
-                    <li>
-                        <a href="#">
-                            <i class='bx bx-pie-chart-alt-2' ></i>
-                            <span class="links_name">Finance</span>
-                        </a>
-                        <span class="tooltip">Finance</span>
-                    </li>
+        <li>
+          <a href="#">
+            <i class="bx bx-box"></i>
+            <span class="links_name">Inventory</span>
+          </a>
+          <span class="tooltip">Inventory</span>
+        </li>
 
-                    <li>
-                        <a href="#">
-                            <i class='bx bx-cart' ></i>
-                            <span class="links_name">Shop</span>
-                        </a>
-                        <span class="tooltip">Shop</span>
-                    </li>
+        <li>
+          <a href="#">
+            <i class="bx bx-pie-chart-alt-2"></i>
+            <span class="links_name">Finance</span>
+          </a>
+          <span class="tooltip">Finance</span>
+        </li>
 
+        <li>
+          <a href="#">
+            <i class="bx bx-cart"></i>
+            <span class="links_name">Shop</span>
+          </a>
+          <span class="tooltip">Shop</span>
+        </li>
 
-                    <li>
-                        <a href="#">
-                            <i class='bx bx-log-out' ></i>
-                            <span class="links_name">Logout</span>
-                        </a>
-                        <span class="tooltip">Logout</span>
-                    </li>
-            </ul>
-  </div>
+        <li id="logout">
+          <a>
+            <i class="bx bx-log-out"></i>
+            <span class="links_name">Logout</span>
+          </a>
+          <span class="tooltip">Logout</span>
+        </li>
+      </ul>
+    </div>
 
-
-  <section class="home-section">
+    <section class="home-section">
       <div class="text">Inventory</div>
 
-    <div class="top-container">
-            <div class="search-container">
-                  <div class="search_wrap search_wrap_1">
-                        <div class="search_box">
-                            <input type="text" class="input" placeholder="search...">
-                              <div class="btn btn_common">
-                                <i class="fas fa-search"></i>
-                              </div>
-                        </div>
-                  </div>
+      <div class="top-container">
+        <div class="search-container">
+          <div class="search_wrap search_wrap_1">
+            <div class="search_box">
+              <input type="text" class="input" placeholder="search..." />
+              <div class="btn btn_common">
+                <i class="fas fa-search"></i>
+              </div>
             </div>
-
-            <div class="time">
-              <iframe src="https://free.timeanddate.com/clock/i7w97wy0/n4192/fn7/fs26/fcfff/tct/pct/ftb/th2" frameborder="0" width="166" height="38" allowtransparency="true"></iframe>
-            </div>
-    </div>
-    <div class="main-container"> 
-          <div class="graph-container">
-                <div class="rectangle">
-                  <h5 class="graph-txt">Inventory Overview</h5>
-                </div>
-
-                <div class="rectangle">
-                  <h5 class="graph-txt">Item Demand</h5>
-                </div>
           </div>
-    </div>   
-  </section>
-  
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script src="dashboard_script.js"></script>
-  <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-</body>
+        </div>
+
+        <div class="time">
+          <iframe
+            src="https://free.timeanddate.com/clock/i7w97wy0/n4192/fn7/fs26/fcfff/tct/pct/ftb/th2"
+            frameborder="0"
+            width="166"
+            height="38"
+            allowtransparency="true"
+          ></iframe>
+        </div>
+      </div>
+      <div class="main-container">
+        <div class="graph-container">
+          <div class="rectangle">
+            <h5 class="graph-txt">Inventory Overview</h5>
+          </div>
+
+          <div class="rectangle">
+            <h5 class="graph-txt">Item Demand</h5>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="dashboard_script.js"></script>
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+  </body>
 </html>
