fixed log out issues and navigation

--- a/client/inventory/index.html
+++ b/client/inventory/index.html
@@ -14,7 +14,7 @@
       <div class="logo-details">
         <img
           class="bx bxl-c-plus-plus icon"
-          src="/client/assets/images/sphere no brand alt logo.png"
+          src="/assets/images/sphere no brand alt logo.png"
           alt="logo"
         />
         <div class="logo_name">Sphere</div>
@@ -22,7 +22,7 @@
       </div>
       <ul class="nav-list">
         <li>
-          <a href="#">
+          <a href="/dashboard">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
@@ -38,14 +38,14 @@
         </li>
 
         <li>
-          <a href="#">
+          <a href="/inventory">
             <i class="bx bx-box"></i>
             <span class="links_name">Inventory</span>
           </a>
           <span class="tooltip">Inventory</span>
         </li>
 
-        <li>
+        <li id="logout">
           <a href="#">
             <i class="bx bx-log-out"></i>
             <span class="links_name">Logout</span>
