--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -38,7 +38,7 @@
           <span class="tooltip">Dashboard</span>
         </li>
 
-        <li id="user" class="nav-item">
+        <!-- <li id="user" class="nav-item">
           <a href="#" class="nav-link">
             <span
               class="iconify"
@@ -47,7 +47,7 @@
             ></span>
             <span class="link-text">User</span>
           </a>
-        </li>
+        </li> -->
 
         <li>
           <a href="#">
@@ -58,7 +58,7 @@
         </li>
 
         <li>
-          <a href="#">
+          <a href="/inventory">
             <i class="bx bx-box"></i>
             <span class="links_name">Inventory</span>
           </a>
@@ -66,7 +66,7 @@
         </li>
 
         <li>
-          <a href="#">
+          <a href="/finance">
             <i class="bx bx-pie-chart-alt-2"></i>
             <span class="links_name">Finance</span>
           </a>
@@ -74,7 +74,7 @@
         </li>
 
         <li>
-          <a href="#">
+          <a href="/ecommerce">
             <i class="bx bx-cart"></i>
             <span class="links_name">Shop</span>
           </a>
