--- a/client/finance/index.html
+++ b/client/finance/index.html
@@ -102,8 +102,9 @@
           </div> <br>
 
           <div class="finance-container">
-                <div id="financeView" class="rectangle">
+                <div class="rectangle">
                   <h5 class="sales-txt">Finance View</h5>
+                  <canvas id="financeView" width="150" height="150"></canvas>
                 </div>
 
                 <div id="countrySales" class="rectangle">
@@ -112,8 +113,7 @@
           </div>
     </div>   
   </section>
-  <script src="https://d3js.org/d3.v4.js"></script>
-  <script script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.min.js" integrity="sha512-5vwN8yor2fFT9pgPS9p9R7AszYaNn0LkQElTXIsZFCL7ucT8zDCAqlQXDdaqgA1mZP47hdvztBMsIoFxq/FyyQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="finance_script.js"></script>
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </body>
