--- a/client/finance/index.html
+++ b/client/finance/index.html
@@ -30,15 +30,15 @@
      </li>
      <li>
         <a href="#">
-          <i class='bx bx-box' ></i>
-          <span class="links_name">Inventory</span>
+          <i class='bx bx-pie-chart-alt-2' ></i>
+          <span class="links_name">Finance</span> 
         </a>
-        <span class="tooltip">Inventory</span>
+        <span class="tooltip">Finance</span>
       </li>
      <li>
         <a href="#">
         <a href="http://localhost:5000/inventory">
-          <i class='bx bx-pie-chart-alt-2' ></i>
+          <i class='bx bx-box' ></i>
           <span class="links_name">Inventory</span>
         </a>
         <span class="tooltip">Inventory</span>
@@ -49,7 +49,7 @@
          <span class="links_name">Shop</span>
        </a>
        <span class="tooltip">Shop</span>
-     </li> <br> <br> <br> <br> <br> <br> <br> <br>
+     </li> <br> <br> <br> <br> <br> <br> <br>
      <li>
      <li id="logout">
       <a href="#">
