added country field in registration

--- a/client/register/index.html
+++ b/client/register/index.html
@@ -45,6 +45,9 @@
               <option value="Finance">Finance</option>
               <option value="InventoryManager">Inventory Manager</option>
             </select>
+            <select class="dropdown" name="country" id="country">
+              <option value="" disabled selected>Select Country</option>
+            </select>
             <br />
             <button id="register" class="login">Sign Up</button>
           </form>
