--- a/client/ecommerce/index.html
+++ b/client/ecommerce/index.html
@@ -151,7 +151,7 @@
   </section>
   <script src="https://d3js.org/d3.v4.js"></script>
   <script script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-  <script src="finance_script.js"></script>
+  <script src="ecommerce_script.js"></script>
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </body>
 </html>
