--- a/client/finance/index.html
+++ b/client/finance/index.html
@@ -29,14 +29,13 @@
        <span class="tooltip">User</span>
      </li>
      <li>
-        <a href="#">
+        <a href="#" class="active-page">
           <i class='bx bx-pie-chart-alt-2' ></i>
           <span class="links_name">Finance</span> 
         </a>
         <span class="tooltip">Finance</span>
       </li>
      <li>
-        <a href="#">
         <a href="http://localhost:5000/inventory">
           <i class='bx bx-box' ></i>
           <span class="links_name">Inventory</span>
@@ -49,7 +48,7 @@
          <span class="links_name">Shop</span>
        </a>
        <span class="tooltip">Shop</span>
-     </li> <br> <br> <br> <br> <br> <br> <br>
+     </li>
      <li>
      <li id="logout">
       <a href="#">
