sidebar navigation buttons and page title revision

--- a/client/inventory/index.html
+++ b/client/inventory/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inventory</title>  
   </head>
   <body>
     <div class="sidebar">
@@ -21,13 +22,13 @@
         <i class="bx bx-menu" id="btn"></i>
       </div>
       <ul class="nav-list">
-        <li>
+        <!-- <li>
           <a href="/dashboard">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
           <span class="tooltip">Dashboard</span>
-        </li>
+        </li> -->
 
         <li>
           <a href="#">
@@ -36,15 +37,20 @@
           </a>
           <span class="tooltip">User</span>
         </li>
-
         <li>
-          <a href="/inventory">
+          <a href="/inventory" class="active-page">
             <i class="bx bx-box"></i>
             <span class="links_name">Inventory</span>
           </a>
           <span class="tooltip">Inventory</span>
         </li>
-
+        <li>
+          <a href="/ecommerce">
+            <i class="bx bx-shopping-bag"></i>
+            <span class="links_name">Shop</span>
+          </a>
+          <span class="tooltip">Shop</span>
+        </li>
         <li id="logout">
           <a href="#">
             <i class="bx bx-log-out"></i>
