--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <title>Dashboard</title>
     <link
       rel="logo icon"
       href="../assets/images/title.png"
@@ -30,14 +30,6 @@
         <i class="bx bx-menu" id="btn"></i>
       </div>
       <ul class="nav-list">
-        <li>
-          <a href="#">
-            <i class="bx bx-grid-alt"></i>
-            <span class="links_name">Dashboard</span>
-          </a>
-          <span class="tooltip">Dashboard</span>
-        </li>
-
         <!-- <li id="user" class="nav-item">
           <a href="#" class="nav-link">
             <span
@@ -48,7 +40,6 @@
             <span class="link-text">User</span>
           </a>
         </li> -->
-
         <li>
           <a href="#">
             <i class="bx bx-user"></i>
@@ -56,7 +47,13 @@
           </a>
           <span class="tooltip">User</span>
         </li>
-
+        <li>
+          <a href="#" class="active-page">
+            <i class="bx bx-grid-alt"></i>
+            <span class="links_name">Dashboard</span>
+          </a>
+          <span class="tooltip">Dashboard</span>
+        </li>
         <li>
           <a href="/inventory">
             <i class="bx bx-box"></i>
@@ -75,7 +72,7 @@
 
         <li>
           <a href="/ecommerce">
-            <i class="bx bx-cart"></i>
+            <i class="bx bx-shopping-bag"></i>
             <span class="links_name">Shop</span>
           </a>
           <span class="tooltip">Shop</span>
