--- a/client/ecommerce/index.html
+++ b/client/ecommerce/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="ecommerce_styles.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   </head>
+     <title>Shop</title>
+    </head>
 <body onload="checkUser()">
   <div class="sidebar">
     <div class="logo-details">
@@ -14,13 +15,13 @@
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
-      <li>
+      <!--<li>
         <a href="http://localhost:5000/dashboard">
           <i class='bx bx-grid-alt'></i>
           <span class="links_name">Dashboard</span>
         </a>
          <span class="tooltip">Dashboard</span>
-      </li>
+      </li> -->
       <li>
        <a href="http://localhost:5000/user">
          <i class='bx bx-user' ></i>
@@ -29,11 +30,18 @@
        <span class="tooltip">User</span>
      </li>
      <li>
-        <a href="http://localhost:5000/inventory">
-          <i class='bx bx-pie-chart-alt-2' ></i>
-          <span class="links_name">Inventory</span>
+        <a href="#" class="active-page">
+          <i class='bx bx-shopping-bag'></i>
+          <span class="links_name">Shop</span>
         </a>
-        <span class="tooltip">Inventory</span>
+        <span class="tooltip">Shop</span>
+      </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-cart' ></i>
+          <span class="links_name">Cart</span>
+        </a>
+        <span class="tooltip">Cart</span>
       </li>
      <li id="logout">
       <a href="#">
@@ -151,7 +159,7 @@
   </section>
   <script src="https://d3js.org/d3.v4.js"></script>
   <script script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-  <script src="finance_script.js"></script>
+  <script src="ecommerce_script.js"></script>
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </body>
 </html>
