sidebar format and access changes

--- a/client/ecommerce/index.html
+++ b/client/ecommerce/index.html
@@ -49,18 +49,20 @@
 
       <li>
       <a href="http://localhost:5000/ecommerce" class="active-page">
-        <i class='bx bx-cart' ></i>
+        <i class='bx bx-shopping-bag' ></i>
         <span class="links_name">Shop</span>
       </a>
       <span class="tooltip">Shop</span>
     </li>
-
+    
+      <li>
         <a href="#">
           <i class='bx bx-cart' ></i>
           <span class="links_name">Cart</span>
         </a>
         <span class="tooltip">Cart</span>
       </li>
+
      <li id="logout">
       <a href="#">
         <i class='bx bx-log-out' ></i>
