--- a/client/finance/index.html
+++ b/client/finance/index.html
@@ -31,7 +31,7 @@
        <span class="tooltip">User</span>
      </li>
      <li>
-        <a href="#" class="active-page">
+        <a href="http://localhost:5000/finance" class="active-page">
           <i class='bx bx-pie-chart-alt-2' ></i>
           <span class="links_name">Finance</span> 
         </a>
@@ -39,7 +39,6 @@
       </li>
 
      <li>
-<<<<<<< HEAD
         <a href="http://localhost:5000/inventory">
           <i class='bx bx-box' ></i>
           <span class="links_name">Inventory</span>
@@ -49,12 +48,7 @@
 
      <li>
        <a href="http://localhost:5000/ecommerce">
-         <i class='bx bx-cart' ></i>
-=======
-       <a href="/ecommerce">
          <i class='bx bx-shopping-bag' ></i>
-
->>>>>>> 8742959b156571d4c2b9de00c1bc48a6d59bdcc4
          <span class="links_name">Shop</span>
        </a>
        <span class="tooltip">Shop</span>
