added pagination for items list in ecommerce

--- a/client/ecommerce/index.html
+++ b/client/ecommerce/index.html
@@ -89,70 +89,17 @@
             </div>
     </div>
     <div class="main-container"> 
-
-            <div id="products" class="product-container">
-            </div>
-
-            <!-- <div class="product-bottomcontainer">
-                        <div class="square">
-                            <div class="image-container"></div>
-                            <div class="amount-container">
-                                  <button class='bx bxs-minus-square'></button>
-                                  <div class="count-container">
-                                    <input type="number" class="count">
-                                  </div>
-                                  <button class='bx bxs-plus-square'></button>
-                            </div>
-                            <div class="price-container">
-                                <button class="price">Add to Cart</button>
-                            </div>
-                        </div>
-
-                        <div class="square">
-                            <div class="image-container"></div>
-                            <div class="amount-container">
-                                  <button class='bx bxs-minus-square'></button>
-                                  <div class="count-container">
-                                    <input type="number" class="count">
-                                  </div>
-                                  <button class='bx bxs-plus-square'></button>
-                            </div>
-                            <div class="price-container">
-                                <button class="price">Add to Cart</button>
-                            </div>
-                        </div>
-                        <div class="square">
-                            <div class="image-container"></div>
-                            <div class="amount-container">
-                                  <button class='bx bxs-minus-square'></button>
-                                  <div class="count-container">
-                                    <input type="number" class="count">
-                                  </div>
-                                  <button class='bx bxs-plus-square'></button>
-                            </div>
-                            <div class="price-container">
-                                <button class="price">Add to Cart</button>
-                            </div>
-                        </div>                             
-                        <div class="square">
-                            <div class="image-container"></div>
-                            <div class="amount-container">
-                                  <button class='bx bxs-minus-square'></button>
-                                  <div class="count-container">
-                                    <input type="number" class="count">
-                                  </div>
-                                  <button class='bx bxs-plus-square'></button>
-                            </div>
-                            <div class="price-container">
-                                <button class="price">Add to Cart</button>
-                            </div>
-                        </div>     
-                        
-            </div> -->
-          
-
+      <div id="products" class="product-container">
+      </div>
+      <div id="pageNumber">
+        <button class="bx bxs-minus-square" id="prev"></button>
+          <h1 id="currentPageNumber">1</h1>
+        <button class="bx bxs-plus-square" id="next"></button>
+      </div>
     </div>   
   </section>
+  <footer>
+  </footer>
   <script src="https://d3js.org/d3.v4.js"></script>
   <script script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="ecommerce_script.js"></script>
