changed display limit to 12

--- a/client/finance/index.html
+++ b/client/finance/index.html
@@ -16,13 +16,13 @@
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
-      <!--<li>
+      <li>
         <a href="http://localhost:5000/dashboard">
           <i class='bx bx-grid-alt'></i>
           <span class="links_name">Dashboard</span>
         </a>
          <span class="tooltip">Dashboard</span>
-      </li> -->
+      </li>
       <li>
        <a href="http://localhost:5000/user">
          <i class='bx bx-user' ></i>
@@ -80,7 +80,7 @@
 
             <div class="totalsales-container">
               <div class="total-sales">
-                <h5 id="total" class="total">Total Sales This Month: &#8287;  </h5>
+                <h5 id="total" class="total">Total Sales This Month: $</h5>
               </div>
           </div>  
     </div>
