added ecommerce basic functionality and cart

--- a/client/ecommerce/index.html
+++ b/client/ecommerce/index.html
@@ -56,7 +56,7 @@
     </li>
     
       <li>
-        <a href="#">
+        <a href="">
           <i class='bx bx-cart' ></i>
           <span class="links_name">Cart</span>
         </a>
@@ -92,9 +92,9 @@
       <div id="products" class="product-container">
       </div>
       <div id="pageNumber">
-        <button class="bx bxs-minus-square" id="prev"></button>
+        <button class="bx" id="prev">Prev</button>
           <h1 id="currentPageNumber">1</h1>
-        <button class="bx bxs-plus-square" id="next"></button>
+        <button class="bx" id="next">Next</button>
       </div>
     </div>   
   </section>
