finished grand total and delete from cart

--- a/client/cart/index.html
+++ b/client/cart/index.html
@@ -84,7 +84,7 @@
       
     </div> 
     <div id="checkout">
-      <h1>Grand Total: </h1>
+      <h1 id="grand_total">Grand Total: $</h1>
       <button>Checkout</button>
     </div>
 
