--- a/client/ecommerce/index.html
+++ b/client/ecommerce/index.html
@@ -56,7 +56,7 @@
     </li>
     
       <li>
-        <a href="">
+        <a href="/cart">
           <i class='bx bx-cart' ></i>
           <span class="links_name">Cart</span>
         </a>
