sidebar active page revision, logout, change icon for shop, change type from number to text to quantity, inventory can now log in, and all accs should have access to user page

--- a/client/cart/index.html
+++ b/client/cart/index.html
@@ -17,7 +17,7 @@
     </div>
     <ul class="nav-list">
       <li>
-        <a href="http://localhost:5000/dashboard" class="active-page">
+        <a href="http://localhost:5000/dashboard">
           <i class='bx bx-grid-alt'></i>
           <span class="links_name">Dashboard</span>
         </a>
@@ -32,27 +32,33 @@
      </li>
  
      <li>
-        <a href="http://localhost:5000/finance">
-          <i class='bx bx-pie-chart-alt-2' ></i>
-          <span class="links_name">Finance</span>
-        </a>
-        <span class="tooltip">Finance</span>
-      </li>
-
-      <li>
-        <a href="http://localhost:5000/inventory">
-          <i class='bx bx-box' ></i>
-          <span class="links_name">Inventory</span>
-        </a>
-        <span class="tooltip">Inventory</span>
-      </li>
+      <a href="http://localhost:5000/finance">
+        <i class='bx bx-pie-chart-alt-2' ></i>
+        <span class="links_name">Finance</span>
+      </a>
+      <span class="tooltip">Finance</span>
+    </li>
+    <li>
+      <a href="http://localhost:5000/inventory">
+        <i class='bx bx-box' ></i>
+        <span class="links_name">Inventory</span>
+      </a>
+      <span class="tooltip">Inventory</span>
+    </li>
 
       <li>
       <a href="http://localhost:5000/ecommerce" >
-        <i class='bx bx-cart' ></i>
+        <i class='bx bx-shopping-bag' ></i>
         <span class="links_name">Shop</span>
       </a>
       <span class="tooltip">Shop</span>
+    </li>
+    <li>
+      <a href="/cart" class="active-page">
+        <i class='bx bx-cart'  ></i>
+        <span class="links_name">Cart</span>
+      </a>
+      <span class="tooltip">Cart</span>
     </li>
 
      <li id="logout">
