--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -48,7 +48,7 @@
 
       <li>
       <a href="http://localhost:5000/ecommerce" >
-        <i class='bx bx-cart' ></i>
+        <i class='bx bx-shopping-bag' ></i>
         <span class="links_name">Shop</span>
       </a>
       <span class="tooltip">Shop</span>
