--- a/client/user/index.html
+++ b/client/user/index.html
@@ -17,14 +17,14 @@
     </div>
     <ul class="nav-list">
       <li>
-        <a href="http://localhost:5000/dashboard" class="active-page">
+        <a href="http://localhost:5000/dashboard" >
           <i class='bx bx-grid-alt'></i>
           <span class="links_name">Dashboard</span>
         </a>
          <span class="tooltip">Dashboard</span>
       </li>
       <li>
-       <a href="http://localhost:5000/user">
+       <a href="http://localhost:5000/user" class="active-page">
          <i class='bx bx-user' ></i>
          <span class="links_name">User</span>
        </a>
@@ -49,7 +49,7 @@
 
       <li>
       <a href="http://localhost:5000/ecommerce" >
-        <i class='bx bx-cart' ></i>
+        <i class='bx bx-shopping-bag' ></i>
         <span class="links_name">Shop</span>
       </a>
       <span class="tooltip">Shop</span>
