--- a/client/inventory/index.html
+++ b/client/inventory/index.html
@@ -34,8 +34,15 @@
          <span class="tooltip">Dashboard</span>
       </li> -->
 
+      <li>
+        <a href="http://localhost:5000/dashboard">
+          <i class='bx bx-grid-alt'></i>
+          <span class="links_name">Dashboard</span>
+        </a>
+         <span class="tooltip">Dashboard</span>
+      </li>
         <li>
-          <a href="#">
+          <a href="http://localhost:5000/user">
             <i class="bx bx-user"></i>
             <span class="links_name">User</span>
           </a>
