implemented user purchases history

--- a/client/user/index.html
+++ b/client/user/index.html
@@ -86,6 +86,17 @@
       <h3 id="role">Role: </h3>
       <h3 id="country">Country: </h3>
     </div> 
+    <div>
+      <h3>Purchases</h3>
+      <table id="purchase_table">
+        <tr>
+          <td>Description</td>
+          <td>Quantity</td>
+          <td>Total</td>
+          <td>Date Purchased</td>
+        </tr>
+      </table>
+    </div>
 
   </section>
   <script src="user_script.js"></script>
