--- a/client/cart/index.html
+++ b/client/cart/index.html
@@ -91,7 +91,7 @@
     </div> 
     <div id="checkout">
       <h1 id="grand_total">Grand Total: $</h1>
-      <button>Checkout</button>
+      <button id="checkout_btn">Checkout</button>
     </div>
 
   </section>
